--- a/articles/config.yml
+++ b/articles/config.yml
@@ -6,7 +6,7 @@
 
 # この設定ファイルでサポートするRe:VIEWのバージョン番号。
 # major versionが違うときにはエラーを出す。
-review_version: 2.0
+review_version: 3.0
 
 # ほかの設定ファイルの継承を指定できる。同じパラメータに異なる値がある場合は、
 # 呼び出し元の値が優先される。
@@ -89,7 +89,8 @@ rights: (C) 2017 ひかる黄金わかめ帝国
 # coverage: 内容の範囲や領域(配列で複数指定可)
 
 # デバッグフラグ。nullでないときには一時ファイルをカレントディレクトリに作成し、削除もしない
-debug: null
+##debug: null
+debug: true
 
 # 固有IDに使用するドメイン。省略した場合は時刻に基づくランダムUUIDが入る
 urnid: urn:uid:https://github.com/vvakame/C92-Splatoon2Guide
@@ -282,11 +283,11 @@ epubmaker:
 # LaTeX用のスタイルファイル(styディレクトリ以下に置くこと)
 # tatsumacroは、電子書籍版の制作に利用する
 # texstyle: tatsumacro
-texstyle: techbooster-doujin
+texstyle: reviewmacro
 #
 # LaTeX用のdocumentclassを指定する
 # texdocumentclass: ["jsbook", "oneside,14pt,uplatex"]
-texdocumentclass: ["jsbook", "a5j,twoside,openany,uplatex,9pt"]
+texdocumentclass: ["review-jsbook", "paper=a5,twoside,openany,Q=12.2,W=38,media=ebook,cover=true"]
 #
 # LaTeX用のコマンドを指定する
 # texcommand: "uplatex"
